--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@ List of endpoints:
         <a href="mirror_recorded">/mirror_recorded</a> - simply mirrors the involi feed (https://hackzurich.involi.live/http_recorded/).
     </li>
     <li>
-        <a href="/post_drone_position">/post_drone_position</a> - URL for POST requests with updated drone data. The form of the request should be the following JSON format: {
+        <a href="/post_drone_position">/post_drone_position</a> - URL for POST or PUT requests with updated drone data. The form of the request should be the following JSON format: {
     "icao": "FA4548",
     "lat": 46.530834474,
     "lon": 6.2578792135,
@@ -26,6 +26,9 @@ List of endpoints:
     "heading": -51.76,
     "last_update": "2018-09-14T22:42:25.898475+00:00"
 }
+    </li>
+    <li>
+         <a href="/post_drone_delete">/post_drone_delete</a> - URL for drone deletion by passing its 24 bit icao number (in HEX). For example with such a command: curl --header "Content-Type: application/json" --request POST --data 'FA4548' http://0.0.0.0:3000/post_drone_delete
     </li>
     <li>
          <a href="/full_data">/full_data</a> - URL for full air traffic data (both from drones and from the planes)
